--- a/main_file.tex
+++ b/main_file.tex
@@ -109,4 +109,70 @@
 \clearemptydoublepage%
 \appendix
 \input{annexe/Annexe.tex}
+
+\newpage%
+\thispagestyle{empty}
+
+\vspace{2cm}
+\noindent\hrulefill
+
+{\bf Auteur: }Margaux NATTAF
+
+{\bf Titre:} Ordonnancement sous contraintes d'énergie
+
+{\bf Directeur de thèse: }Christian ARTIGUES et Pierre LOPEZ
+
+Soutenue le 18/10/2016 au LAAS-CNRS (Toulouse) 
+
+\noindent\hrulefill
+
+{\bf Résumé: }Les problèmes d’ordonnancement à contraintes de
+ressource ont été largement étudiés dans la littérature. Cependant,
+dans la plupart des cas, il est supposé que les activités ont une
+durée fixe et nécessitent une quantité constante de la ressource
+durant toute leur exécution.  Dans cette thèse, nous nous proposons de
+traiter un problème d'ordonnancement dans lequel les tâches ont une
+durée et un profil de consommation de ressource variables. Ce profil,
+qui peut varier en fonction du temps, est une variable de décision du
+problème dont dépend la durée de la tâche associée. Par ailleurs, la
+considération de fonctions de rendement linéaires et non linéaires
+pour la représentation de l’utilisation des ressources complexifie le
+problème et permet de modéliser de manière réaliste les transferts de
+ressources énergétiques. Pour ce problème NP-complet, nous présentons
+plusieurs propriétés permettant de dériver des modèles et méthodes de
+résolution. Ces méthodes de résolution sont divisées en deux
+parties. La première partie visualise ce problème du point de vue de
+la Programmation Par Contraintes et plusieurs méthodes dérivées de ce
+paradigme sont détaillées dont le développement du raisonnement
+énergétique sur le problème étudié. La seconde partie de la thèse est
+dédiée à des approches de Programmation Linéaire Mixte et plusieurs
+modèles, notamment un modèle à temps continu basé sur les événements,
+ainsi que des analyses théoriques et des techniques d’amélioration de
+ces modèles sont présentés. Enfin, des expérimentations viennent
+appuyer les résultats présentés dans ce manuscrit.
+
+\noindent\hrulefill
+
+{\bf Mots-clés: } ordonnancemment, énergie, recherche arborescente et
+locale, programmation mathématique, propagation de
+contraintes, complexité
+
+
+
+\noindent\hrulefill
+
+{\bf Discipline administrative: }Informatique
+
+\noindent\hrulefill
+
+{\bf Adresse du laboratoire :} 
+
+Laboratoire d'Analyse et d'Architecture des Systèmes
+
+7, avenue du Colonel Roche 
+
+BP 54200 
+
+31031 Toulouse cedex 4, France
+
 \end{document}
